opam-version: "2.0"
version: "v0.17.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/hardcaml_xilinx_reports"
bug-reports: "https://github.com/janestreet/hardcaml_xilinx_reports/issues"
dev-repo: "git+https://github.com/janestreet/hardcaml_xilinx_reports.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml_xilinx_reports/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"        {>= "5.1.0"}
  "async"        {>= "v0.17" & < "v0.18"}
  "base"         {>= "v0.17" & < "v0.18"}
  "core"         {>= "v0.17" & < "v0.18"}
  "core_unix"    {>= "v0.17" & < "v0.18"}
  "hardcaml"     {>= "v0.17" & < "v0.18"}
  "ppx_hardcaml" {>= "v0.17" & < "v0.18"}
  "ppx_jane"     {>= "v0.17" & < "v0.18"}
  "stdio"        {>= "v0.17" & < "v0.18"}
  "textutils"    {>= "v0.17" & < "v0.18"}
  "dune"         {>= "3.11.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Hardcaml Xilinx Reports"
description: "
Provides a library which can take a hierarchical hardcaml design and run Xilinx
Vivado synthesis on each module in the design hierarchy.

Resource utilization and timing estimates are provided for each module.

The synthesis process for each module can be configured to report statistics for
just the local module, or for all modules below it as well. Running in different
ways can provide better insight into the design.
"
